Closed Bug 336849 Opened 19 years ago Closed 19 years ago

[FIX]Classinfo improvements for Attr and XULAttr

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file, 1 obsolete file)

See "Classinfo for Attr" and "XULAttr classinfo" in mozilla.dev.tech.dom. The former should improve; the latter should die.
Attached patch Fix (obsolete) — Splinter Review
Attachment #221051 - Flags: superreview?(jst)
Attachment #221051 - Flags: review?(bugmail)
Comment on attachment 221051 [details] [diff] [review] Fix Feel free to ask dbaron about nsDOMAttribute::AppendReachableList
Attachment #221051 - Flags: review?(bugmail) → review+
Attachment #221051 - Flags: superreview?(jst) → superreview+
Attached patch Updated to tipSplinter Review
Attachment #221051 - Attachment is obsolete: true
Fixed.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: