Remove XULAttr classinfo, and make Attr use NodeSH.  Bug 336849, r=sicking, sr=jst