dom/src/base/nsDOMClassInfo.h
@@ -1637,6 +1637,27 @@ public:
   }
 };
 
+// Need this to override GetFlags() on nsNodeSH
+class nsAttributeSH : public nsNodeSH
+{
+protected:
+  nsAttributeSH(nsDOMClassInfoData* aData) : nsNodeSH(aData)
+  {
+  }
+
+  virtual ~nsAttributeSH()
+  {
+  }
+
+public:
+  NS_IMETHOD GetFlags(PRUint32 *aFlags);
+
+  static nsIClassInfo *doCreate(nsDOMClassInfoData* aData)
+  {
+    return new nsAttributeSH(aData);
+  }
+};
+
 void InvalidateContextAndWrapperCache();
 
 
